--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,6 @@ services:
       context: ./app
       dockerfile: Dockerfile
     volumes:
-      - ./app/app.py:/opt/app/app.py
+      - ./app/app.py:/opt/streamlit/app.py
     env_file:
       - ./.env
